possibilities and bar

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -3,6 +3,8 @@ $bg-footer: #031B34;
 $bg-blog: #042C54;
 $text-color:#81AFDD;
 $subtext-color:#FF8A71;
+$subtext-color-2: #71E5FF;
+
 
 $bg-button: #FF4820;
 $button-border-radius: 5px;
